@@ -1,5 +1,10 @@
 Version (CVS)
 -------------
+XML:    Solved a performance bug for unmarshalling of primitive type. We don't try anymore 
+        to generate a Class Descriptor for primitive type as we know that not only it 
+        fails but it is deadly slow (due to getMethods() call). Now, unmarhsalling speed 
+        is nearly only bounded by the speed of the parser.
+        (Sebastien Gignoux <gignoux@intalio.com>) 
 
 JDO:    Added "trigger" mode for SEQUENCE key generator. 
         (Vitaly Shishakov <vitaly.shishakov@novalumen.com>)
